# go-tictactoe

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  go.mod  go.sum  main.go
cmd/: BUILD.bazel  root.go
docs/: argocd.md
fence/docker/: Dockerfile
fence/k8s/base/service-pod/: base-service.yaml
fence/k8s/kind/tictactoe-pod/: kind-tictactoe-patch.yaml  kustomization.yaml
scripts/: get_version.bash
